# temi_script

./: package.xml  setup.cfg  setup.py
temi_script/: temi_automation.py
