<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temi_script</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="keai_jiang_chee@cgh.com.sg">ubuntu</maintainer>
  <license>TODO: License declaration</license>

<exec_depend>rclpy</exec_depend>
<exec_depend>std_msgs</exec_depend>


  <build_depend>rmf_fleet_msgs</build_depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_lift_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
